<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:text="@string/licenseLibrary1"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="16dp"
                android:autoLink="web"
                android:background="@color/drawerLine"
                android:linksClickable="true"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:text="@string/licenseLibrary1Desc"
                android:textSize="12sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:text="@string/licenseLibrary2"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView3"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="16dp"
                android:autoLink="web"
                android:background="@color/drawerLine"
                android:linksClickable="true"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:text="@string/licenseLibrary2Desc"
                android:textSize="12sp"
                android:textColor="@color/black"/>
        </RelativeLayout>
    </LinearLayout>

</ScrollView>